kubernetes/apps/cdi/cdi-instance/manifests/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas-9iu.pages.dev/gateway.networking.k8s.io/httproute_v1beta1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cdi-upload-proxy-httproute
spec:
  hostnames:
    - cdi-uploadproxy.darkfellanetwork.com
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
      sectionName: https
  rules:
    - backendRefs:
        - name: cdi-uploadproxy
          namespace: cdi
          port: 443
